messing with the ssh key

--- a/UK-VIRT-FE-PT-11-2022-U-LOLC-main/week-1/03-css-layout-box-model-lesson/02-Ins-HTML-display/index.html
+++ b/UK-VIRT-FE-PT-11-2022-U-LOLC-main/week-1/03-css-layout-box-model-lesson/02-Ins-HTML-display/index.html
@@ -11,7 +11,7 @@
     <header>
       <!-- Headers -->
       <h1>CSS Display Property</h1>
-    </header>
+    </header
 
     <section>
       <h2>Inline Elements</h2>
